# automate

./: .gitignore  Readme.md  pyproject.toml
.github/workflows/: calculator-cd.yml  calculator-ci.yml
tests/: test_calculator.py
