[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automate"
version = "0.1.0"
description = "Toy calculator project for learning CI/CD"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Muhammad Dawood" }
]

[tool.setuptools.packages.find]
where = ["."]
